--- a/SugarRushBakery/SugarRushBakery/Main.storyboard
+++ b/SugarRushBakery/SugarRushBakery/Main.storyboard
@@ -158,7 +158,7 @@
                         <segue destination="TJT-7W-KM5" kind="push" identifier="Owner" id="ONw-y6-hG8"/>
                         <segue destination="HY6-EV-SdQ" kind="push" identifier="contact" id="Pzo-Ix-jQL"/>
                         <segue destination="BVF-oO-Ezl" kind="push" identifier="order" id="XFc-ve-r2s"/>
-                        <segue destination="u2l-7t-npx" kind="push" identifier="gallerySegue" id="QfP-aN-haD"/>
+                        <segue destination="eAe-Xq-lvH" kind="push" identifier="gallerySelection" id="rJb-oE-JeN"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="x5A-6p-PRh" sceneMemberID="firstResponder"/>
@@ -617,6 +617,61 @@
             </objects>
             <point key="canvasLocation" x="1648.5" y="1426"/>
         </scene>
+        <!--Gallery Selection View Controller-->
+        <scene sceneID="q3m-K9-VVX">
+            <objects>
+                <viewController id="eAe-Xq-lvH" customClass="GallerySelectionViewController" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="0PQ-Eo-dCq"/>
+                        <viewControllerLayoutGuide type="bottom" id="oyi-Ce-zzu"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="8jo-yS-Yg5">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="48" sectionHeaderHeight="22" sectionFooterHeight="22" translatesAutoresizingMaskIntoConstraints="NO" id="gxI-en-pKl">
+                                <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <prototypes>
+                                    <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="selectionCell" rowHeight="48" id="ze3-45-QWt">
+                                        <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="ze3-45-QWt" id="jq8-Nk-7ER">
+                                            <autoresizingMask key="autoresizingMask"/>
+                                        </tableViewCellContentView>
+                                    </tableViewCell>
+                                </prototypes>
+                                <variation key="widthClass=compact" fixedFrame="YES">
+                                    <rect key="frame" x="0.0" y="64" width="400" height="536"/>
+                                </variation>
+                                <connections>
+                                    <outlet property="dataSource" destination="eAe-Xq-lvH" id="VVX-Hf-eam"/>
+                                    <outlet property="delegate" destination="eAe-Xq-lvH" id="Q1M-NS-cH3"/>
+                                </connections>
+                            </tableView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <variation key="default">
+                            <mask key="subviews">
+                                <exclude reference="gxI-en-pKl"/>
+                            </mask>
+                        </variation>
+                        <variation key="widthClass=compact">
+                            <mask key="subviews">
+                                <include reference="gxI-en-pKl"/>
+                            </mask>
+                        </variation>
+                    </view>
+                    <navigationItem key="navigationItem" id="lBP-Au-9IT"/>
+                    <connections>
+                        <outlet property="tableView" destination="gxI-en-pKl" id="8m4-Qf-vWz"/>
+                        <segue destination="u2l-7t-npx" kind="push" identifier="gallerySelected" id="LcP-y5-FUX"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="8W8-5J-SHg" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2383.5" y="1430"/>
+        </scene>
         <!--Gallery View Controller-->
         <scene sceneID="89H-au-4GS">
             <objects>
@@ -691,7 +746,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="TkE-Vl-ujb" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2410.5" y="1426"/>
+            <point key="canvasLocation" x="2410.5" y="2151"/>
         </scene>
         <!--Order View Controller-->
         <scene sceneID="5Pr-Iw-XIb">
@@ -762,12 +817,12 @@
                     <connections>
                         <segue destination="4u5-63-q64" kind="push" identifier="customOrder" id="bM2-or-jyx"/>
                         <segue destination="sTS-Jv-OUD" kind="push" identifier="myOrder" id="15Z-6t-ytw"/>
-                        <segue destination="u2l-7t-npx" kind="push" identifier="orderToGallery" id="4mR-6B-Oti"/>
+                        <segue destination="eAe-Xq-lvH" kind="push" identifier="orderToGallery" id="xmJ-bi-T9O"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="09I-lg-XWl" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="3145.5" y="1426"/>
+            <point key="canvasLocation" x="3133.5" y="1426"/>
         </scene>
         <!--Premade View Controller-->
         <scene sceneID="fiQ-aO-n0B">
@@ -822,7 +877,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="GmM-LH-0Af" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2410.5" y="2151"/>
+            <point key="canvasLocation" x="2410.5" y="2931"/>
         </scene>
         <!--My Orders View Controller-->
         <scene sceneID="MxD-VW-6DC">
@@ -1254,8 +1309,8 @@
         </scene>
     </scenes>
     <inferredMetricsTieBreakers>
+        <segue reference="xmJ-bi-T9O"/>
         <segue reference="bM2-or-jyx"/>
-        <segue reference="4mR-6B-Oti"/>
     </inferredMetricsTieBreakers>
     <color key="tintColor" red="0.35084234976012307" green="0.66639466729349262" blue="1" alpha="1" colorSpace="calibratedRGB"/>
 </document>
